--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     #favFiltroBtn.active{background:#ff4757; color:#fff; border-color:#ff4757; box-shadow: 0 0 15px #ff4757}
 
     /* Categorias */
-    #categoriaBtns{margin:15px 0; display:flex; justify-content:center; flex-wrap:wrap; gap:5px}
-    .catBtn{background:#222;color:#fff;padding:8px 18px;border-radius:6px;font-weight:700;transition:0.3s; cursor:pointer; border:none}
+    #categoriaBtns{margin:15px 0; display:flex; justify-content:center; flex-wrap:wrap; gap:5px; padding: 0 10px}
+    .catBtn{background:#222;color:#fff;padding:8px 18px;border-radius:6px;font-weight:700;transition:0.3s; cursor:pointer; border:none; margin-bottom: 5px}
     .catBtn.active, .catBtn:hover{background:#0ff;color:#111}
 
     /* Catálogo */
@@ -50,8 +50,13 @@
     .fav-card-btn{position:absolute; bottom:45px; right:15px; background:rgba(0,0,0,0.8); color:rgba(255,255,255,0.5); width:35px; height:35px; border-radius:50%; font-size:18px; display:flex; align-items:center; justify-content:center; border: 1px solid rgba(255,255,255,0.2); transition: 0.3s; z-index:10}
     .fav-card-btn.active{color:#ff4757; background:#fff; border-color:#ff4757; box-shadow: 0 0 15px #ff4757; transform: scale(1.1)}
 
-    .badge{position:absolute;top:38px;left:6px;padding:3px 6px;font-size:11px;font-weight:700;border-radius:4px;color:#111;z-index:5}
-    .ps2{background:#00ffff} .ps3{background:#8a2be2; color:#fff} .pc{background:#00ff00} .roms{background:#ff8c00}
+    .badge{position:absolute;top:38px;left:6px;padding:3px 6px;font-size:10px;font-weight:700;border-radius:4px;color:#111;z-index:5; text-transform: uppercase;}
+    .ps2{background:#00ffff} 
+    .ps3{background:#8a2be2; color:#fff} 
+    .ps1{background:#ff007f; color:#fff}
+    .youtube{background:#ff0000; color:#fff}
+    .pc{background:#00ff00} 
+    .roms{background:#ff8c00}
 
     #adminSection{display:none;background:#1a1a1a;padding:25px;border-radius:12px;width:320px;margin:20px auto;box-shadow:0 6px 20px rgba(0,255,255,0.2); border: 1px solid #333}
     #adminSection input, #adminSection select{display:block;margin:12px auto;padding:10px;width:90%;border-radius:6px;border:none;background:#111;color:#fff}
@@ -73,34 +78,42 @@
 </header>
 
 <div class="action-bar">
-  <button id="importBtn" class="action-btn">Importar Jogos</button>
+  <button id="importBtn" class="action-btn">Importar Dados</button>
   <button id="favFiltroBtn" class="action-btn">❤️ Favoritos</button>
   <button id="exportBtn" class="action-btn" style="display:none">Exportar Backup</button>
 </div>
 
 <div id="categoriaBtns">
   <button class="catBtn active" data-cat="Todos">Todos</button>
-  <button class="catBtn" data-cat="Jogos PS2">Jogos PS2</button>
-  <button class="catBtn" data-cat="Jogos PS3">Jogos PS3</button>
-  <button class="catBtn" data-cat="Jogos PC">Jogos PC</button>
+  <button class="catBtn" data-cat="Jogos PS2">PS2</button>
+  <button class="catBtn" data-cat="PS2 com Cheats">PS2 + Cheats</button>
+  <button class="catBtn" data-cat="Jogos PS3">PS3</button>
+  <button class="catBtn" data-cat="PS3 com Cheats">PS3 + Cheats</button>
+  <button class="catBtn" data-cat="Jogos PS1">PS1</button>
+  <button class="catBtn" data-cat="PS1 com Cheats">PS1 + Cheats</button>
+  <button class="catBtn" data-cat="YouTube">YouTube</button>
+  <button class="catBtn" data-cat="Jogos PC">PC</button>
   <button class="catBtn" data-cat="Fix SteamTools">Fix</button>
   <button class="catBtn" data-cat="Arquivos">Arquivos</button>
-  <button class="catBtn" data-cat="Jogos PS1">PS1</button>
-  <button class="catBtn" data-cat="Emuladores e Roms">Emuladores e Roms</button>
+  <button class="catBtn" data-cat="Emuladores e Roms">Roms</button>
 </div>
 
 <section id="adminSection">
-  <h3 id="adminTitle">Novo Jogo</h3>
-  <input type="text" id="nomeJogo" placeholder="Nome do Jogo">
-  <input type="text" id="linkCapa" placeholder="URL da Capa">
-  <input type="text" id="linkJogo" placeholder="Link de Download">
+  <h3 id="adminTitle">Novo Item</h3>
+  <input type="text" id="nomeJogo" placeholder="Nome do Item">
+  <input type="text" id="linkCapa" placeholder="URL da Capa (Imagem)">
+  <input type="text" id="linkJogo" placeholder="Link de Destino/Download">
   <select id="selectCategoria">
     <option value="Jogos PS2">Jogos PS2</option>
+    <option value="PS2 com Cheats">PS2 com Cheats</option>
     <option value="Jogos PS3">Jogos PS3</option>
+    <option value="PS3 com Cheats">PS3 com Cheats</option>
+    <option value="Jogos PS1">Jogos PS1</option>
+    <option value="PS1 com Cheats">PS1 com Cheats</option>
+    <option value="YouTube">YouTube</option>
     <option value="Jogos PC">Jogos PC</option>
     <option value="Fix SteamTools">Fix SteamTools</option>
     <option value="Arquivos">Arquivos</option>
-    <option value="Jogos PS1">Jogos PS1</option>
     <option value="Emuladores e Roms">Emuladores e Roms</option>
   </select>
   <button id="addJogoBtn" style="background:#0ff; width:100%; padding:10px; cursor:pointer; font-weight:700; border:none; border-radius:6px">SALVAR ✏️</button>
@@ -136,10 +149,19 @@
       if((catSelecionada==='Todos' || jogo.categoria===catSelecionada) && 
          (jogo.nome.toLowerCase().includes(term)) &&
          (!apenasFavs || isFav)){
+        
         const div = document.createElement('div');
         div.className = 'jogo';
+        
+        // Lógica de cores das Badges melhorada
         const bC = jogo.categoria.toLowerCase();
-        const bClass = bC.includes('ps2')?'ps2':bC.includes('ps3')?'ps3':bC.includes('roms')?'roms':'pc';
+        let bClass = 'pc';
+        if(bC.includes('ps2')) bClass = 'ps2';
+        else if(bC.includes('ps3')) bClass = 'ps3';
+        else if(bC.includes('ps1')) bClass = 'ps1';
+        else if(bC.includes('youtube')) bClass = 'youtube';
+        else if(bC.includes('roms')) bClass = 'roms';
+
         div.innerHTML = `
           <button class="excluir-btn" style="display:${adminMode?'block':'none'}" onclick="event.stopPropagation(); excluir(${index})">×</button>
           <button class="editar-btn" style="display:${adminMode?'block':'none'}" onclick="event.stopPropagation(); editar(${index})">EDITAR</button>
@@ -173,7 +195,7 @@
     render();
   };
 
-  window.excluir = (i) => { if(confirm('Excluir este jogo?')){ jogos.splice(i,1); save(); render(); } };
+  window.excluir = (i) => { if(confirm('Excluir este item?')){ jogos.splice(i,1); save(); render(); } };
   window.editar = (i) => {
     editIndex = i;
     const j = jogos[i];
@@ -182,7 +204,7 @@
     document.getElementById('linkJogo').value=j.link;
     document.getElementById('selectCategoria').value=j.categoria;
     document.getElementById('adminSection').style.display='block';
-    document.getElementById('adminTitle').textContent="Editando Jogo";
+    document.getElementById('adminTitle').textContent="Editando Item";
     window.scrollTo({top: 0, behavior: 'smooth'});
   };
 
@@ -200,7 +222,6 @@
     } else alert('Senha Incorreta!');
   };
 
-  // Teclado
   window.addEventListener('keydown', (e) => {
     if(e.key === 'Escape') toggleAdminMode(true);
   });
@@ -217,7 +238,7 @@
     else{ jogos.push({nome:n, capa:c, link:l, categoria:cat}); }
     save(); render();
     document.querySelectorAll('#adminSection input').forEach(i=>i.value='');
-    document.getElementById('adminTitle').textContent="Novo Jogo";
+    document.getElementById('adminTitle').textContent="Novo Item";
   };
 
   document.getElementById('favFiltroBtn').onclick = function(){
