--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
 (function(){
     // Configurações e URLs (Mantidas conforme o padrão de segurança)
     const URL_TOKENS = "https://raw.githubusercontent.com/cheats0075/toolflix/main/tokens.json";
-    const URL_JOGOS = "https://cdn.jsdelivr.net/gh/cheats0075/toolflix@latest/toolflix_backup.json";
+    const URL_JOGOS = "https://raw.githubusercontent.com/cheats0075/toolflix/main/toolflix_backup.json";
+
 
     // Banco de Dados Local
     let db_jogos = JSON.parse(localStorage.getItem('jogosPS2')) || [];
