--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -88,7 +89,22 @@
         .jogo:hover { transform: scale(1.06) translateY(-10px); border-color: var(--cor-accent); box-shadow: 0 15px 35px rgba(0,0,0,0.5), 0 0 15px rgba(0, 255, 255, 0.2); z-index: 2; }
         .jogo img { width: 100%; border-radius: 14px; aspect-ratio: 1/1; object-fit: cover; display: block; transition: 0.4s; }
         
-        .jogo-premium { border: 2px solid gold !important; }
+        .jogo-premium {
+    border: 2px solid gold !important;
+    position: relative;
+    overflow: hidden;
+    /* animação de brilho */
+    animation: premiumGlow 2s infinite alternate;
+}
+
+@keyframes premiumGlow {
+    0% { box-shadow: 0 0 5px gold, 0 0 10px gold; }
+    50% { box-shadow: 0 0 15px gold, 0 0 25px gold; }
+    100% { box-shadow: 0 0 5px gold, 0 0 10px gold; }
+}
+
+.premium-locked img { filter: grayscale(100%) blur(8px); opacity: 0.2; }
+
         .premium-locked img { filter: grayscale(100%) blur(8px); opacity: 0.2; }
 
         /* PAINEL ADMIN (PRESERVADO) */
