--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -155,6 +156,50 @@ body.theme-fortnite {
         .modal-box { background: #111; padding: 45px; border-radius: 30px; width: 400px; text-align: center; border: 1px solid #333; }
         #toast-container { position: fixed; bottom: 30px; right: 30px; z-index: 10000; }
         .toast { background: #fff; color: #000; padding: 16px 28px; border-radius: 14px; margin-top: 12px; font-weight: bold; animation: toastIn 0.3s ease; }
+		/* === SUPORTE FLUTUANTE === */
+.suporte-container {
+    position: fixed;
+    bottom: 24px;
+    right: 24px;
+    z-index: 9999;
+}
+
+.suporte-btn {
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    border: none;
+    background: linear-gradient(135deg, #ffd700, #ffb700);
+    color: #000;
+    font-size: 30px;
+    cursor: pointer;
+    box-shadow: 0 0 20px rgba(255, 215, 0, 0.85);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.suporte-btn:hover {
+    transform: scale(1.08);
+}
+
+.suporte-painel {
+    position: absolute;
+    bottom: 78px;
+    right: 0;
+    width: 300px;
+    background: rgba(15, 15, 15, 0.95);
+    backdrop-filter: blur(10px);
+    border-radius: 18px;
+    padding: 16px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+    display: none;
+}
+
+.suporte-container.ativo .suporte-painel {
+    display: block;
+}
+
     </style>
 </head>
 <body class="theme-default">
@@ -583,7 +628,38 @@ document.querySelectorAll('.catBtn').forEach(b => {
 
     checkPremiumSync();
     syncJogos();
+	// === SUPORTE FLUTUANTE ===
+window.toggleSuporte = function () {
+    const box = document.getElementById('suporteContainer');
+    if (box) box.classList.toggle('ativo');
+};
+
 })();
 </script>
+<!-- SUPORTE FLUTUANTE -->
+<div class="suporte-container" id="suporteContainer">
+    <button class="suporte-btn" onclick="toggleSuporte()">🎧</button>
+
+    <div class="suporte-painel">
+        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:10px;">
+            <strong>📬 Suporte</strong>
+            <span style="cursor:pointer; font-size:20px;" onclick="toggleSuporte()">✖</span>
+        </div>
+
+        <div style="font-size:13px; opacity:0.85; margin-bottom:12px;">
+            <div>• Pedidos de jogos no YouTube</div>
+            <div>• Informar link off no Discord</div>
+            <div>• Pedir token extra no YouTube </div>
+			<div>• ajuda para instalar no Telegram</div>
+        </div>
+
+        <div style="display:flex; flex-direction:column; gap:8px;">
+            <a href="https://t.me/gokugames0" target="_blank">✈️ Telegram</a>
+            <a href="https://discord.com/users/990270059068928011" target="_blank">🎮 Discord</a>
+            <a href="https://www.youtube.com/watch?v=BB0RbhXJWVc" target="_blank">📺 YouTube</a>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
