--- a/index.html
+++ b/index.html
@@ -200,7 +200,21 @@ body.theme-fortnite {
     display: block;
 }
 
-    </style>
+   @keyframes shake {
+  0%{transform:translateX(0)}
+  20%{transform:translateX(-4px)}
+  40%{transform:translateX(4px)}
+  60%{transform:translateX(-3px)}
+  80%{transform:translateX(3px)}
+  100%{transform:translateX(0)}
+}
+
+.card-shake {
+  animation: shake 0.35s ease;
+  box-shadow: 0 0 12px rgba(255,0,0,.7);
+}
+ 
+	</style>
 </head>
 <body class="theme-default">
 
@@ -429,7 +443,29 @@ async function checkPremiumSync() {
             const card = document.createElement('div');
             card.className = `jogo ${isP ? 'jogo-premium' : ''} ${lock ? 'premium-locked' : ''}`;
             
-            card.onclick = () => { if(lock) showToast("🔒 Conteúdo Premium!"); else window.open(j.link, '_blank'); };
+            card.onclick = () => {
+    if (lock) {
+        showToast("🔒 Conteúdo Premium!");
+
+        card.classList.add('card-shake');
+        setTimeout(() => card.classList.remove('card-shake'), 400);
+
+        const ctx = new (window.AudioContext || window.webkitAudioContext)();
+        const osc = ctx.createOscillator();
+        const gain = ctx.createGain();
+        osc.connect(gain);
+        gain.connect(ctx.destination);
+        osc.frequency.value = 180;
+        gain.gain.value = 0.05;
+        osc.start();
+        osc.stop(ctx.currentTime + 0.12);
+
+        return;
+    }
+
+    window.open(j.link, '_blank');
+};
+
             card.innerHTML = `
                 <button onclick="event.stopPropagation(); window.toggleFav('${j.nome}')" style="position:absolute; top:12px; right:12px; background:rgba(0,0,0,0.7); color:${isF?'#ff4757':'#fff'}; border:none; width:34px; height:34px; border-radius:50%; cursor:pointer; z-index:10; transition:0.3s; display:flex; align-items:center; justify-content:center; font-size:18px">${isF?'❤️':'🤍'}</button>
                 ${lock ? '<span style="position:absolute; top:40%; left:50%; transform:translate(-50%,-50%); font-size:40px; z-index:5">🔒</span>' : ''}
